Disabled smooth scrolling on narrower width devices for snappier navigation on mobile, and footer fix for mobile.

--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@ html {
     scroll-behavior: smooth;
   }
 
+@media screen and (max-width: 1000px){ 
+    html {
+        scroll-behavior: auto;
+    }
+} 
+
 body {
     margin: 0 auto;
 }
@@ -434,7 +440,7 @@ section p {
     grid-template-columns: 1fr 1fr;
     gap: 80px;
     font-size: 1.25rem;
-    padding: 10px 0px; 
+    padding: 5px 10px; 
 
     position: fixed;
     width: 100%;
